Fix layout bug

--- a/src/assets/css/App.css
+++ b/src/assets/css/App.css
@@ -1,14 +1,4 @@
-#root {
-  text-align: center;
-  background-color: rgb(93, 86, 100);
-}
-
 * {
   margin: 0;
   padding: 0;
 }
-
-/* body {
-  margin: 0;
-  padding: 0;
-} */
