--- a/src/assets/css/layout.css
+++ b/src/assets/css/layout.css
@@ -2,12 +2,14 @@
     display: flex;
     flex-direction: column;
     min-height: 100vh;
+    /* text-align: center; */
 }
 
 .main {
     display: flex;
+    flex-direction: column;
     flex: 1;
-    justify-content: center;
+    /* justify-content: center; */
     align-items: center;
     padding: 20px;
 
